# ChatGPT

./: .gitignore
reqsmith/: .env.example  README.md  docker-compose.yml  pyproject.toml
reqsmith/alembic/: env.py
reqsmith/alembic/versions/: 001_initial_schema.py
reqsmith/config/policies/: gates-v1.yaml  outreach-v1.yaml  risk-tiers-v1.yaml
reqsmith/console/: index.html  package.json  tailwind.config.js  vite.config.ts
reqsmith/console/src/: App.tsx  index.css  main.tsx
reqsmith/console/src/api/: client.ts
reqsmith/console/src/components/: RiskBadge.tsx  Spinner.tsx  StateBadge.tsx
reqsmith/console/src/views/: AuditView.tsx  QueueView.tsx  WorkspaceView.tsx
reqsmith/deploy/: Dockerfile
reqsmith/prompts/: analyst_v1.md  judge_rubric_v1.md
reqsmith/src/reqsmith/: deps.py  settings.py
reqsmith/src/reqsmith/adapters/atlassian_mcp/: client.py
reqsmith/src/reqsmith/adapters/graph/: fake.py  (+1 more)
reqsmith/src/reqsmith/api/: admin.py  app.py  jobs.py  reviewer.py  webhooks_jira.py
reqsmith/src/reqsmith/audit/: ledger.py
reqsmith/src/reqsmith/orchestrator/: engine.py  state_machine.py
reqsmith/src/reqsmith/persistence/: db.py  idempotency.py  models.py  repo.py
reqsmith/src/reqsmith/stages/: __init__.py  drafting.py  publish.py  retrieval.py  triage.py  verification.py
reqsmith/src/reqsmith/verification/: gates.py  grounding.py  scoring.py
reqsmith/tests/: conftest.py
reqsmith/tests/e2e/: test_reviewer_api.py  test_smoke_epic.py
reqsmith/tests/unit/: test_api.py  test_engine.py  test_gates.py  test_idempotency.py  test_state_machine.py
(+10 files in other folders)
