[project]
name = "reqsmith"
version = "0.1.0"
description = "Agentic requirements gathering & analysis framework — MVP shadow mode + Teams elicitation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tenacity>=8.3",
    "structlog>=24.1",
    "anthropic>=0.34",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
# Heavy agent stack kept optional so the core pipeline tests stay fast;
# crews modules import these lazily and fail with a clear message if absent.
agents = ["crewai>=0.86,<1", "crewai-tools[mcp]>=0.17,<1"]
outreach = ["botbuilder-core>=4.16", "msal>=1.28"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reqsmith"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
